# regional-heterogeneity

./: README.md  pyproject.toml
Experiments/: build_ram.py  data_utils.py  datasets.py  models.py  ram_script.py
src/heteram/: build_ram.py  models.py
